--- a/web/index.html
+++ b/web/index.html
@@ -56,6 +56,10 @@
   </script>
 </body>
 
+<script type="text/javascript">
+  window.fluterWebRenderer = "html";
+</script>
+
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.4/firebase-app.js";
